build basic board shapes with grid

--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,28 @@
-.App {
-  text-align: center;
+
+
+.board {
+  margin:auto;
+  display: grid;
+  grid-template-columns: repeat(14, 1fr);
+  grid-template-rows: repeat(14, 1fr);
+  border: 1px solid black;
+  height: 75vw;
+  width: 75vw;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.piece {
+  justify-self: stretch;
+  background-color: red;
+  grid-column: 1;
+  grid-row: 1;
+  border-radius: 100%
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.spike {
+  clip-path: polygon(0 0, 50% 100%, 100% 0);
+  background-color: black;
+  grid-column: 1;
+  grid-row: 1/7;
+  justify-self: stretch;
+  z-index: -99;
 }
