--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,25 @@
   grid-template-columns: repeat(13, 1fr);
   grid-template-rows: repeat(13, 1fr);
   border: 1px solid black;
-  height: 75vw;
-  width: 75vw;
+  height: 75vh;
+  width: 75vh;
   position: absolute
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  align-items: center;
+}
+
+.home {
+  width: 75vh;
+}
+
+.board-container {
+  height: 75vh;
+  width: 75vh;
 }
 
 .back {
@@ -17,9 +33,12 @@
 
 
 .piece {
-  justify-self: stretch;
   border-radius: 100%;
-  grid-column: 1;
+  height: 16.6666%;
+  width: 100%;
+  color: black;
+  text-align: center;
+  line-height:2.8;
 }
 
 .spike-top {
@@ -35,6 +54,22 @@
   justify-self: stretch;
   z-index: -99;
 }
+
+.spike-area {
+  display: flex;
+  flex-direction: column;
+}
+
+.board-top {
+  grid-row: 1/7;
+}
+
+.board-bottom {
+  grid-row: 8/14;
+  flex-direction: column-reverse;
+}
+
+
 
 .bar {
   justify-self: stretch;
@@ -59,4 +94,72 @@
 
 .purple {
   background-color: purple;
+}
+
+.stats {
+  padding: 0.2rem;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:700&subset=latin,latin-ext);
+body {
+  background: url("http://thecodeplayer.com/uploads/media/geometry.png");
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.button-container {
+  padding: 10px 0;
+  text-align: center;
+}
+
+.button {
+  display: inline-block;
+  padding: 12px 24px;
+  border: 1px solid #4f4f4f;
+  border-radius: 4px;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+}
+.button:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+.button:after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: #39bda7;
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+.button:hover {
+  color: #ffffff;
+  border: 1px solid #39bda7;
+  cursor: pointer;
+}
+.button:hover:before {
+  top: -35%;
+  background-color: #39bda7;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+.button:hover:after {
+  top: -45%;
+  background-color: #39bda7;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
